# dehazing-sample

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
dehazing-sample/: CMakeLists.txt  Dockerfile  main_dehazing.cpp
dehazing-sample/include/: atmospheric_light.hpp  dark_channel_prior.hpp  dehazing.hpp  image_process.hpp  remove_haze.cuh  remove_haze.hpp  transmission_map.hpp
dehazing-sample/src/: CMakeLists.txt  atmospheric_light.cpp  dark_channel_prior.cpp  dehazing.cpp  remove_haze.cpp  remove_haze.cu  transmission_map.cpp
dehazing-sample/tests/: CMakeLists.txt  test_atmospheric_light.cpp  test_dark_channel_prior.cpp  test_dehazing.cpp  test_remove_haze.cpp  test_transmission_map.cpp
dehazing-sample/tests/data/: parameters.json
dehazing-sample/tests/include/: utils.hpp
dehazing-sample/tests/src/: utils.cpp
include/: dark_channel_prior.cuh  dark_channel_prior.hpp  dehazing.hpp  image_process.hpp  transmission_map.hpp
samples/: CMakeLists.txt  main_dehazing.cpp
src/: CMakeLists.txt  atmospheric_light.cpp  dark_channel_prior.cpp  dark_channel_prior.cu
tests/: CMakeLists.txt  test_atmospheric_light.cpp  test_dark_channel_prior.cpp  test_dehazing.cpp  test_remove_haze.cpp
tests/data/: parameters.json
